<resources>
    <!--Login-->
    <string name="Username"> Username / E-mail </string>
    <string name="PasswordL"> Password </string>
    <string name="btnLoginText">LOG IN</string>

    <string name="Label_forgot"> Forgot your Password? </string>
    <string name="Label_Account"> Create Account </string>

    <!--Formulario-->
    <string name="Name_Person"> Name </string>
    <string name="LName_Person"> Last Name </string>
    <string name="CompanyName"> Company Name </string>
    <string name="RFC">R.F.C</string>
    <string name="mail">E-Mail</string>
    <string name="Cell">Cellphone Number</string>
    <string name="Terms">Accept Terms </string>
    <string name="btn_account">CREATE ACCOUNT</string>



    <string name="app_name">Servicios Profesionales</string>


    <string name="action_settings">Settings</string>

   <!-- Strings used for fragments for navigation -->
   <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>-
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
</resources>