<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <EditText
        android:id="@+id/eT_Name"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/Name_Person"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eT_LastName"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/LName_Person"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_Name" />

    <EditText
        android:id="@+id/eT_Companyname"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/CompanyName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_LastName" />

    <EditText
        android:id="@+id/eT_RFC"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/RFC"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_Companyname" />


    <EditText
        android:id="@+id/eT_Email"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_RFC" />

   <EditText
        android:id="@+id/eT_Cellphone"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Cell"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_Email" />

    <Switch
        android:id="@+id/switch_ok"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/Terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_Cellphone" />

    <Button
        android:id="@+id/btn_Save"
        android:layout_width="246dp"
        android:layout_height="61dp"
        android:text="@string/btn_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_Cellphone"
        app:layout_constraintVertical_bias="0.608" />


</androidx.constraintlayout.widget.ConstraintLayout>